--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
     <title>Home</title>
 </head>
 
@@ -32,7 +32,7 @@
             </nav>
         </div>
         <div class="intro">
-            <h1>Luckyboy Teboho Motsamai</h1><img src="../img/myself1.jpg" alt="photoofmyself" width="230px" height="300px">
+            <h1>Luckyboy Teboho Motsamai</h1><img src="img/myself1.jpg" alt="photoofmyself" width="230px" height="300px">
         </div>
         <article>
             <h1 id="aboutme">About Me</h1>
@@ -104,10 +104,10 @@
         </div>
         <div class="moreinfo">
             <div>
-                I have created <span class="textbold">GitHub portfolio</span>  for all the projects I have worked on so far
+                I have created <span class="textbold">GitHub profile</span>  for all my projects and these are recent projects have worked on 
             </div>
             <div>
-                <span class="gotogithubtext"><a href="https://github.com/motsamaiteboho">click here</a></span> to visit my GitHub porfolio
+                <span class="gotogithubtext"><a href="https://github.com/motsamaiteboho">click here</a></span> to visit my GitHub to view more projects
             </div>
         </div>
         <article>
@@ -136,10 +136,10 @@
                 prouldy created by Teboho Motsamai
             </div>
             <div class="icons">
-                <a href="https://www.linkedin.com/in/motsamaiteboho"><img src="../icons/linkedin.png" alt="linkedinicon" style="width:42px;height:42px;"></a>
-                <a href="https://github.com/motsamaiteboho"><img src="../icons/github.png" alt="githubicon" style="width:42px;height:42px;"></a>
-                <a href="https://m.facebook.com/profile.php"><img src="../icons/facebook.png" alt="facebookicon" style="width:42px;height:42px;"></a>
-                <a href="https://www.instagram.com/tebohomotsamai_"><img src="../icons/instagram.png" alt="instagramicon" style="width:42px;height:42px;"></a>
+                <a href="https://www.linkedin.com/in/motsamaiteboho"><img src="icons/linkedin.png" alt="linkedinicon" style="width:42px;height:42px;"></a>
+                <a href="https://github.com/motsamaiteboho"><img src="icons/github.png" alt="githubicon" style="width:42px;height:42px;"></a>
+                <a href="https://m.facebook.com/profile.php"><img src="icons/facebook.png" alt="facebookicon" style="width:42px;height:42px;"></a>
+                <a href="https://www.instagram.com/tebohomotsamai_"><img src="icons/instagram.png" alt="instagramicon" style="width:42px;height:42px;"></a>
             </div>
         </div>
 
