--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
             <h1 id="aboutme">About Me</h1>
             <p>Hello, my name is Luckyboy Teboho Motsamai from Phomolong, Hennenman in Free State but I'm currently
                 based in Bloemfontein. I'm very passionate about the technology and always looking forward to learning new
-                skills. I like being up to date with latest advancements in software developments
-                I have some background in software developments, having studying BSc in Computer science and
-                Mathematics. One of my biggest strengths is that I'm good at picking up new skills. I've worked a variety of
+                skills. I like being up to date with latest advancements in software development.
+                I have some background in software development, having studying BSc in Computer science and
+                Mathematics.I'm good at picking up new skills. I've worked on variety of
                 different technologies. For most of those technologies, I ended up picking up all the skills within the
-                short period of time. I have also attended coding bootcamps including codex. I have completed some online
-                courses to further develop my skills and acquire more knowledge.I have just the right skill-set to excel
-                as junior software developer.I have worked on couple of projects so I'll be able to pick up all 
-                the necessary skills much faster.I am confident that this role will allow me to further develop my skills 
-                and contribute as much of value as I can on the growth of the company. You can find out more about me by  <a href="https://www.linkedin.com/in/motsamaiteboho">clicking here </a></p>
+                short period of time. I have attended codex coding bootcamp and now I'm currently enrolled in thier one year agile 
+                full stack web development programme.I have completed some online courses to further develop my skills and acquire more knowledge.
+                I have just the right skill-set to excel as junior software developer.I am confident that the role as junior software developer
+                will allow me to further develop my skills and contribute as much of value as I can on the growth of the company. If You
+                love to know more about me then you can reach out to me by <a href="https://www.linkedin.com/in/motsamaiteboho">clicking here </a></p>
 
             <h1 id="technicalskills">Technical skills</h1>
             <p>I have worked with various technology stacks such as C# Web Application Development(.NET CORE AND API's),
-                Core Web Development tools(bootstrap,and fontawesome), The terminal, JavaScript, Ajax, DOM, HTML & CSS. Here are
+                Core Web Development tools(bootstrap,and fontawesome), The terminal, JavaScript, Ajax, DOM, HTML & CSS,Jupiter notebook(python) and MathLab. Here are
                 the tech tacks I'm yet to learn: NodeJS, ExpressJS, GulpJS, Git & GitHub, Travis - Continuous integration, Handlebars, MySQL, Test Driven
                 Development using Mocha, Deployment: Heroku (PaaS) & Digital Ocean (VPS)</p>
             <p>Here are <span style="font-weight:bold;">skills</span> of I have acquired so far:</p>
@@ -90,7 +90,7 @@
             <div class="softwaresborder software3">
                 <span class="textbold textstyle">Project: Web Application</span><br>
                 <span class="textbold">Repostory name:</span> Sports store<br>
-                <span class="textbold">Category:</span> Frontend & Backend <br>
+                <span class="textbold">Development Category:</span> Frontend & Backend <br>
                 <span class="textbold">Technology stacks:</span> C#(.NET CORE),JavaScript,HTML & CSS<br>
                 <span class="gotogithubtext"><a href="https://github.com/motsamaiteboho/SportsStore">Go to GitHub Repo...</a></span>
             </div>
