What I have done

--- a/index.html
+++ b/index.html
@@ -32,28 +32,56 @@
             </nav>
         </div>
         <div class="intro">
-            <h1>Luckyboy Teboho Motsamai</h1><img src="img/myself1.jpg" alt="photoofmyself" width="230px" height="300px">
+            <h1>Luckyboy Teboho Motsamai</h1><img src="img/myself1.jpg" alt="photoofmyself" width="230px"
+                height="300px">
         </div>
         <article>
             <h1 id="aboutme">About Me</h1>
             <p>Hello, my name is Luckyboy Teboho Motsamai from Phomolong, Hennenman in Free State but I'm currently
-                based in Bloemfontein. I'm very passionate about the technology and always looking forward to learning new
+                based in Bloemfontein. I'm very passionate about the technology and always looking forward to learning
+                new
                 skills. I like being up to date with latest advancements in software development.
                 I have some background in software development, having studying BSc in Computer science and
                 Mathematics.I'm good at picking up new skills. I've worked on variety of
                 different technologies. For most of those technologies, I ended up picking up all the skills within the
-                short period of time. I have attended codex coding bootcamp and now I'm currently enrolled in thier one year agile 
-                full stack web development programme.I have completed some online courses to further develop my skills and acquire more knowledge.
-                I have just the right skill-set to excel as junior software developer.I am confident that the role as junior software developer
-                will allow me to further develop my skills and contribute as much of value as I can on the growth of the company. If You
-                love to know more about me then you can reach out to me by <a href="https://www.linkedin.com/in/motsamaiteboho">clicking here </a></p>
+                short period of time. I currently attending full-stack agile web development training at Project Codex.I
+                have completed
+                some online courses to further develop my skills and acquire more knowledge.
+                I have just the right skill-set to excel as junior software developer.I am confident that the role as
+                junior software developer
+                will allow me to further develop my skills and contribute as much of value as I can on the growth of the
+                company. If you
+                would like to know more about me then you can get in touch with me <a
+                    href="https://www.linkedin.com/in/motsamaiteboho"> here </a></p>
 
             <h1 id="technicalskills">Technical skills</h1>
             <p>I have worked with various technology stacks such as C# Web Application Development(.NET CORE AND API's),
-                Core Web Development tools(bootstrap,and fontawesome), The terminal, JavaScript, Ajax, DOM, HTML & CSS,Jupiter notebook(python) and MathLab. Here are
-                the tech tacks I'm yet to learn: NodeJS, ExpressJS, GulpJS, Git & GitHub, Travis - Continuous integration, Handlebars, MySQL, Test Driven
-                Development using Mocha, Deployment: Heroku (PaaS) & Digital Ocean (VPS)</p>
-            <p>Here are <span style="font-weight:bold;">skills</span> of I have acquired so far:</p>
+                Core Web Development tools(bootstrap,and fontawesome), The terminal, JavaScript, Ajax, DOM, HTML &
+                CSS,Jupiter notebook(python) and MathLab. I'm current working with
+                the following tech stacks:
+            </p>
+            <p>Front-end Development:</p>
+            <ul>
+                <li>Javascript</li>
+                <li>Test Driven Development(TDD)</li>
+                <li>Mocha setup</li>
+                <li>Building DOM widgets</li>
+                <li>Template setup</li>
+                <li>Handlebars</li>
+                <li>Git and Github</li>
+            </ul>
+            <p>Back-end Development:</p>
+            <ul>
+                <li>ExpressJS</li>
+                <li>Setup and start an ExpressJS server</li>
+                <li>NodeJS</li>
+                <li>Adding ExpressJS middleware</li>
+                <li>Use express-handlebars for server-side templating</li>
+                <li>Deploying with Postgresql</li>
+                <li>Settting up databse</li>
+                <li>creating tables</li>
+            </ul>
+            <p>Here are other <span style="font-weight:bold;">skills</span> of I have acquired so far:</p>
             <ul>
                 <li>Data structures and Advanced Programming in C#</li>
                 <li>Design Patterns in C#</li>
@@ -67,10 +95,18 @@
                 <li>JavaScript Algorithms and Data Structures</li>
                 <li>Responsive Web Design</li>
             </ul>
-          
+
         </article>
         <div id="softwares">
             <h1>Softwares</h1>
+            <div class="softwaresborder software1">
+                <span class="textbold textstyle">Project: Web Application</span><br>
+                <span class="textbold">Repostory name:</span> Total bill App using DOM <br>
+                <span class="textbold">Development category:</span> Frontend & Backend <br>
+                <span class="textbold">Technology stacks:</span>JavaScript 52.9%, HTML 43.9% & CSS 3.2%<br>
+                <span class="gotogithubtext"><a href="https://motsamaiteboho.github.io/dom-intro/">Go to GitHub
+                        Repo...</a></span>
+            </div>
         </div>
         <div class="softwares">
             <div class="softwaresborder software1">
@@ -78,41 +114,49 @@
                 <span class="textbold">Repostory name:</span> SallysPieShop <br>
                 <span class="textbold">Development category:</span> Frontend & Backend <br>
                 <span class="textbold">Technology stacks:</span> C#(.NET CORE),JavaScript,HTML & CSS<br>
-                <span class="gotogithubtext"><a href="https://github.com/motsamaiteboho/SallysPieShop">Go to GitHub Repo...</a></span>
+                <span class="gotogithubtext"><a href="https://github.com/motsamaiteboho/SallysPieShop">Go to GitHub
+                        Repo...</a></span>
             </div>
             <div class="softwaresborder software2">
                 <span class="textbold textstyle">Project: Console Application</span><br>
                 <span class="textbold">Repostory name:</span> Cellphone shop queue system<br>
                 <span class="textbold"> Development category:</span> Backend <br>
                 <span class="textbold">Technology stacks:</span> C#(.NET Framework)<br>
-                <span class="gotogithubtext"><a href="https://github.com/motsamaiteboho/cell-phone-shop-queue">Go to GitHub Repo...</a></span>
+                <span class="gotogithubtext"><a href="https://github.com/motsamaiteboho/cell-phone-shop-queue">Go to
+                        GitHub Repo...</a></span>
             </div>
             <div class="softwaresborder software3">
                 <span class="textbold textstyle">Project: Web Application</span><br>
                 <span class="textbold">Repostory name:</span> Sports store<br>
                 <span class="textbold">Development Category:</span> Frontend & Backend <br>
                 <span class="textbold">Technology stacks:</span> C#(.NET CORE),JavaScript,HTML & CSS<br>
-                <span class="gotogithubtext"><a href="https://github.com/motsamaiteboho/SportsStore">Go to GitHub Repo...</a></span>
+                <span class="gotogithubtext"><a href="https://github.com/motsamaiteboho/SportsStore">Go to GitHub
+                        Repo...</a></span>
             </div>
             <div class="softwaresborder software4">
-                <span class="textbold textstyle">Project: Webpage</span><br>
-                <span class="textbold">Repostory name:</span> Perfect Pizza<br>
-                <span class="textbold">Development category:</span> Frontend <br>
-                <span class="textbold">Technology stacks:</span> HTML & CSS<br>
-                <span class="gotogithubtext"><a href="https://github.com/motsamaiteboho/perfect-pizza">Go to GitHub Repo...</a></span>
+                <div class="softwaresborder software1">
+                    <span class="textbold textstyle">Project: Web Application</span><br>
+                    <span class="textbold">Repostory name:</span> SallysPieShop <br>
+                    <span class="textbold">Development category:</span> Frontend & Backend <br>
+                    <span class="textbold">Technology stacks:</span> C#(.NET CORE),JavaScript,HTML & CSS<br>
+                    <span class="gotogithubtext"><a href="https://github.com/motsamaiteboho/SallysPieShop">Go to GitHub
+                            Repo...</a></span>
+                </div>
             </div>
         </div>
         <div class="moreinfo">
             <div>
-                I have created <span class="textbold">GitHub profile</span>  for all my projects and these are recent projects have worked on 
+                I have created <span class="textbold">GitHub profile</span> for all my projects and these are recent
+                projects have worked on
             </div>
             <div>
-                <span class="gotogithubtext"><a href="https://github.com/motsamaiteboho">click here</a></span> to visit my GitHub to view more projects
+                <span class="gotogithubtext"><a href="https://github.com/motsamaiteboho">click here</a></span> to visit
+                my GitHub to view more projects
             </div>
         </div>
         <article>
             <h1 id="curreentventures">Current Ventures</h1>
-            <p>The following are my current ventures in software development but not limitted to:  </p>
+            <p>The following are my current ventures in software development but not limitted to: </p>
             <ul>
                 <li>Revising the core web dev tools</li>
                 <li>Attending codex agile web development programme</li>
@@ -136,10 +180,14 @@
                 prouldy created by Teboho Motsamai
             </div>
             <div class="icons">
-                <a href="https://www.linkedin.com/in/motsamaiteboho"><img src="icons/linkedin.png" alt="linkedinicon" style="width:42px;height:42px;"></a>
-                <a href="https://github.com/motsamaiteboho"><img src="icons/github.png" alt="githubicon" style="width:42px;height:42px;"></a>
-                <a href="https://m.facebook.com/profile.php"><img src="icons/facebook.png" alt="facebookicon" style="width:42px;height:42px;"></a>
-                <a href="https://www.instagram.com/tebohomotsamai_"><img src="icons/instagram.png" alt="instagramicon" style="width:42px;height:42px;"></a>
+                <a href="https://www.linkedin.com/in/motsamaiteboho"><img src="icons/linkedin.png" alt="linkedinicon"
+                        style="width:42px;height:42px;"></a>
+                <a href="https://github.com/motsamaiteboho"><img src="icons/github.png" alt="githubicon"
+                        style="width:42px;height:42px;"></a>
+                <a href="https://m.facebook.com/profile.php"><img src="icons/facebook.png" alt="facebookicon"
+                        style="width:42px;height:42px;"></a>
+                <a href="https://www.instagram.com/tebohomotsamai_"><img src="icons/instagram.png" alt="instagramicon"
+                        style="width:42px;height:42px;"></a>
             </div>
         </div>
 
