What I have done

--- a/index.html
+++ b/index.html
@@ -99,22 +99,14 @@
         </article>
         <div id="softwares">
             <h1>Softwares</h1>
-            <div class="softwaresborder software1">
-                <span class="textbold textstyle">Project: Web Application</span><br>
-                <span class="textbold">Repostory name:</span> Total bill App using DOM <br>
-                <span class="textbold">Development category:</span> Frontend & Backend <br>
-                <span class="textbold">Technology stacks:</span>JavaScript 52.9%, HTML 43.9% & CSS 3.2%<br>
-                <span class="gotogithubtext"><a href="https://motsamaiteboho.github.io/dom-intro/">Go to GitHub
-                        Repo...</a></span>
-            </div>
         </div>
         <div class="softwares">
             <div class="softwaresborder software1">
                 <span class="textbold textstyle">Project: Web Application</span><br>
-                <span class="textbold">Repostory name:</span> SallysPieShop <br>
+                <span class="textbold">Repostory name:</span> Total bill App usind <br>
                 <span class="textbold">Development category:</span> Frontend & Backend <br>
-                <span class="textbold">Technology stacks:</span> C#(.NET CORE),JavaScript,HTML & CSS<br>
-                <span class="gotogithubtext"><a href="https://github.com/motsamaiteboho/SallysPieShop">Go to GitHub
+                <span class="textbold">Technology stacks:</span>JavaScript 52.9%, HTML 43.9% & CSS 3.2%<br>
+                <span class="gotogithubtext"><a href="https://motsamaiteboho.github.io/dom-intro/">Go to GitHub
                         Repo...</a></span>
             </div>
             <div class="softwaresborder software2">
